--- a/public/html/instructions.html
+++ b/public/html/instructions.html
@@ -11,7 +11,7 @@ window.location="/topic";
 <style>
 body
 {
-background:#567;
+background:skyblue;
 font-family:'Open Sans',sans-serif;
 color:white;
 }
