--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <span href="#" class="button" id="toggle-login">Log in</span>
+  <span href="#" class="button" id="toggle-login">Quiz Scholar</span>
 
 <div id="login">
   <div id="triangle"></div>
