--- a/public/html/scores.html
+++ b/public/html/scores.html
@@ -8,7 +8,7 @@
 
 body
 {
-background:#567;
+background:skyblue;
 font-family:'Open Sans',sans-serif;
 color:white;
 }
@@ -16,7 +16,7 @@ color:white;
 .header
 {
 font-size:20px;
-background-color:#2E8B57;
+background-color:navy;
 border: 4px solid yellow;
 border-radius:4px;
 margin-left:30px;
@@ -26,7 +26,7 @@ margin-right:30px;
 #scoreholder
 {
 font-size:25px;
-background-color:#2E8B57;
+background-color:navy;
 border: 4px solid yellow;
 border-radius:4px;
 margin-left:30px;
@@ -51,7 +51,7 @@ padding:20px;
 border: 1px solid white;
 text-align:center;
 padding:10px;
-background-color:#2E8B57;
+background-color:#3ABEFE;
 }
 </style>
 </head>
