--- a/public/html/topic.html
+++ b/public/html/topic.html
@@ -20,7 +20,7 @@ $(document).ready(function(){
 
 body
 {
-background:#295887;
+background:skyblue;
 font-family:'Open Sans',sans-serif;
 color:white;
 }
@@ -93,7 +93,7 @@ background:#A155E8;
 <body>
 	<br><br>
 	<div class="header">
-			<h1 align="center" class="headtext">Category</h1>
+			<h1 align="center" class="headtext">Categories</h1>
 	</div>
 
 	<div class="topics" align="center">
